documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32NET.VB

    Public Declare Function L43_ListConfig Lib "L43W32.DLL" Alias "_L43_ListConfig@12" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_ListConfigEx Lib "L43W32.DLL" Alias "_L43_ListConfigEx@12" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_ListDataBlkWr Lib "L43W32.DLL" Alias "_L43_ListDataBlkWr@16" (ByRef dataptr As UInt32, ByVal datacount As UInt16, ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_ListDataRdEx Lib "L43W32.DLL" Alias "_L43_ListDataRdEx@12" (ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L43_ListDataWrEx Lib "L43W32.DLL" Alias "_L43_ListDataWrEx@16" (ByVal value As UInt32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function L43_ListInit Lib "L43W32.DLL" Alias "_L43_ListInit@12" (ByVal listaddr As UInt32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_ListNextRd Lib "L43W32.DLL" Alias "_L43_ListNextRd@8" (ByVal listaddr As UInt32, ByRef header As UInt16) As UInt32
    Public Declare Function L43_ListNextWr Lib "L43W32.DLL" Alias "_L43_ListNextWr@8" (ByVal listaddr As UInt32, ByRef header As UInt16) As UInt32
    Public Declare Sub L43_ListPostRd Lib "L43W32.DLL" Alias "_L43_ListPostRd@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L43_ListPostWr Lib "L43W32.DLL" Alias "_L43_ListPostWr@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L43_ListPreRd Lib "L43W32.DLL" Alias "_L43_ListPreRd@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L43_ListPreWr Lib "L43W32.DLL" Alias "_L43_ListPreWr@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As UInt32)
    Public Declare Function L43_ListStatus Lib "L43W32.DLL" Alias "_L43_ListStatus@8" (ByVal listaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_MakeLong Lib "L43W32.DLL" Alias "_L43_MakeLong@8" (ByVal valh As UInt16, ByVal vall As UInt16) As UInt32
    Public Declare Function L43_MantToAscii Lib "L43W32.DLL" Alias "_L43_MantToAscii@12" (ByRef buf As String, ByVal mant As Int32, ByVal exp As Int32) As UInt32
    Public Declare Function L43_Mask Lib "L43W32.DLL" Alias "_L43_Mask@8" (ByVal dataval As UInt32, ByVal cntval As Int32) As UInt32
    Public Declare Sub L43_MaxMant Lib "L43W32.DLL" Alias "_L43_MaxMant@8" (ByRef mant As UInt32, ByRef exp As Int32)
    Public Declare Sub L43_MEMWINFillW Lib "L43W32.DLL" Alias "_L43_MEMWINFillW@20" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_MEMWINRdB Lib "L43W32.DLL" Alias "_L43_MEMWINRdB@12" (ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L43_MEMWINRdL Lib "L43W32.DLL" Alias "_L43_MEMWINRdL@12" (ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L43_MEMWINRdsL Lib "L43W32.DLL" Alias "_L43_MEMWINRdsL@20" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub L43_MEMWINRdsW Lib "L43W32.DLL" Alias "_L43_MEMWINRdsW@20" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_MEMWINRdW Lib "L43W32.DLL" Alias "_L43_MEMWINRdW@12" (ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_MEMWINWrB Lib "L43W32.DLL" Alias "_L43_MEMWINWrB@16" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub L43_MEMWINWrL Lib "L43W32.DLL" Alias "_L43_MEMWINWrL@16" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub L43_MEMWINWrsL Lib "L43W32.DLL" Alias "_L43_MEMWINWrsL@20" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub L43_MEMWINWrsW Lib "L43W32.DLL" Alias "_L43_MEMWINWrsW@20" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Sub L43_MEMWINWrW Lib "L43W32.DLL" Alias "_L43_MEMWINWrW@16" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal bustype As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_Mod Lib "L43W32.DLL" Alias "_L43_Mod@8" (ByVal moda As UInt32, ByVal modb As UInt32) As UInt32
    Public Declare Function L43_MsgActivityRd Lib "L43W32.DLL" Alias "_L43_MsgActivityRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_MsgActivityWr Lib "L43W32.DLL" Alias "_L43_MsgActivityWr@12" (ByVal value As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function L43_MsgCheck Lib "L43W32.DLL" Alias "_L43_MsgCheck@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L43_MsgConfig Lib "L43W32.DLL" Alias "_L43_MsgConfig@12" (ByVal configval As UInt32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_MsgOptRd Lib "L43W32.DLL" Alias "_L43_MsgOptRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_MsgOptWr Lib "L43W32.DLL" Alias "_L43_MsgOptWr@12" (ByVal msgopt As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function L43_MsgReset Lib "L43W32.DLL" Alias "_L43_MsgReset@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_Mul Lib "L43W32.DLL" Alias "_L43_Mul@8" (ByVal mula As UInt32, ByVal mulb As UInt32) As UInt32
    Public Declare Sub L43_NormalMant Lib "L43W32.DLL" Alias "_L43_NormalMant@8" (ByRef mant As UInt32, ByRef exp As Int32)
    Public Declare Function L43_PortRd Lib "L43W32.DLL" Alias "_L43_PortRd@8" (ByVal addrval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_PortWr Lib "L43W32.DLL" Alias "_L43_PortWr@12" (ByVal value As UInt16, ByVal addrval As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_ProgRdW Lib "L43W32.DLL" Alias "_L43_ProgRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_ProgWrW Lib "L43W32.DLL" Alias "_L43_ProgWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L43_RAMFill Lib "L43W32.DLL" Alias "_L43_RAMFill@16" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L43_RAMIsDPM Lib "L43W32.DLL" Alias "_L43_RAMIsDPM@4" (ByVal addrval As UInt32) As Int32
    Public Declare Function L43_RAMRdB Lib "L43W32.DLL" Alias "_L43_RAMRdB@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L43_RAMRdL Lib "L43W32.DLL" Alias "_L43_RAMRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L43_RAMRdsL Lib "L43W32.DLL" Alias "_L43_RAMRdsL@16" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L43_RAMRdsW Lib "L43W32.DLL" Alias "_L43_RAMRdsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_RAMRdW Lib "L43W32.DLL" Alias "_L43_RAMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_RAMWipe Lib "L43W32.DLL" Alias "_L43_RAMWipe@4" (ByVal handleval As UInt32)
    Public Declare Sub L43_RAMWipeEx Lib "L43W32.DLL" Alias "_L43_RAMWipeEx@8" (ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L43_RAMWrB Lib "L43W32.DLL" Alias "_L43_RAMWrB@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L43_RAMWrL Lib "L43W32.DLL" Alias "_L43_RAMWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L43_RAMWrsL Lib "L43W32.DLL" Alias "_L43_RAMWrsL@16" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L43_RAMWrsW Lib "L43W32.DLL" Alias "_L43_RAMWrsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L43_RAMWrW Lib "L43W32.DLL" Alias "_L43_RAMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L43_SchedAdvance Lib "L43W32.DLL" Alias "_L43_SchedAdvance@0" () As UInt32
    Public Declare Function L43_SchedAgain Lib "L43W32.DLL" Alias "_L43_SchedAgain@12" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedBranchEx Lib "L43W32.DLL" Alias "_L43_SchedBranchEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedBuildEx Lib "L43W32.DLL" Alias "_L43_SchedBuildEx@28" (ByVal nummsgs As Int32, ByRef msgaddr As UInt32, ByRef minperiod As Int32, ByRef maxperiod As Int32, ByVal speed As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedBuildExx Lib "L43W32.DLL" Alias "_L43_SchedBuildExx@40" (ByVal basevalmsgnum As Int32, ByVal nummsgs As Int32, ByRef msgaddr As UInt32, ByRef minperiod As Int32, ByRef maxperiod As Int32, ByVal speed As Int32, ByVal buf As IntPtr, ByVal bufsize As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedCalc Lib "L43W32.DLL" Alias "_L43_SchedCalc@0" () As UInt32
    Public Declare Function L43_SchedCallEx Lib "L43W32.DLL" Alias "_L43_SchedCallEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedCheck Lib "L43W32.DLL" Alias "_L43_SchedCheck@8" (ByRef minperiod As Int32, ByRef maxperiod As Int32) As Int32
    Public Declare Sub L43_SchedCheckEnd Lib "L43W32.DLL" Alias "_L43_SchedCheckEnd@0" ()
    Public Declare Sub L43_SchedCheckMiddle Lib "L43W32.DLL" Alias "_L43_SchedCheckMiddle@16" (ByVal msgnum As UInt32, ByVal minlen As UInt32, ByVal midlen As UInt32, ByVal maxlen As UInt32)
    Public Declare Sub L43_SchedCheckReal Lib "L43W32.DLL" Alias "_L43_SchedCheckReal@16" (ByVal msgnum As UInt32, ByVal minlen As UInt32, ByVal midlen As UInt32, ByVal maxlen As UInt32)
    Public Declare Sub L43_SchedCheckStart Lib "L43W32.DLL" Alias "_L43_SchedCheckStart@0" ()
    Public Declare Function L43_SchedConflicts Lib "L43W32.DLL" Alias "_L43_SchedConflicts@0" () As UInt32
    Public Declare Function L43_SchedDivide Lib "L43W32.DLL" Alias "_L43_SchedDivide@0" () As Int32
    Public Declare Function L43_SchedFix Lib "L43W32.DLL" Alias "_L43_SchedFix@0" () As UInt32
    Public Declare Sub L43_SchedFixEnd Lib "L43W32.DLL" Alias "_L43_SchedFixEnd@0" ()
    Public Declare Sub L43_SchedFixMiddle Lib "L43W32.DLL" Alias "_L43_SchedFixMiddle@4" (ByVal conflicts As UInt32)
    Public Declare Sub L43_SchedFixStart Lib "L43W32.DLL" Alias "_L43_SchedFixStart@0" ()
    Public Declare Sub L43_SchedHook Lib "L43W32.DLL" Alias "_L43_SchedHook@8" (ByVal index As Int32, ByVal ptr As IntPtr)
